--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Revolutionary AI-powered SEO platform that creates, optimizes, and scales content 10x faster. Dominate search results with advanced analytics, automated content generation, and intelligent SEO tools. Transform your digital presence with serp.systems.">
   <title>serp.systems | AI-Powered SEO Revolution</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
